# watermelon

./: .gitignore  CMakeLists.txt  README.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  feature_request.yml  refactor_request.yml  test_request.yml
docs/: ROADMAP.md
include/: comment_remover.h  compiler.h  error_reporter.h  exceptions.h  expression.h  file_operations.h  function_tester.h  highlight_manager.h  infix_to_postfix.h  location.h  memory.h  operator.h  operator_table.h  script_line.h  stack.h  syntax_validator.h  token.h  tokenizer.h  value.h
include/core/: compiler.h  script_line.h
include/lexer/: comment_remover.h  token.h  tokenizer.h
include/parser/: syntax_validator.h
resources/: test.cpp  test.wm  test_output.cpp
src/: compiler.cpp  error_reporter.cpp  expression.cpp  file_operations.cpp  highlight_manager.cpp  infix_to_postfix.cpp  location.cpp  main.cpp  memory.cpp  operator.cpp  operator_table.cpp  script_line.cpp  stack.cpp  syntax_validator.cpp  token.cpp  tokenizer.cpp  value.cpp
src/core/: compiler.cpp  memory.cpp  script_line.cpp
src/lexer/: comment_remover.cpp  token.cpp  tokenizer.cpp
src/parser/: syntax_validator.cpp
tests/: check_parenthesis.cpp  expected.wm  function_tester.cpp  function_tester.h  infix_to_postfix_tests.cpp  stack_tests.cpp  test.cpp  tests.cpp
tests/infix_to_postfix_tests/: expected.txt  input.txt
tests/tokenize_tests/: expected.txt  input.txt
